@@ -48,31 +48,27 @@ class Lib {
 
 	static function __init__() untyped {
 		#if debug
-		__js__('
-			onerror = function(msg,url,line) {
-				var stack = $s.copy();
-				var f = js.Lib.onerror;
-				$s.splice(0,$s.length);
-				if( f == null ) {
-					var i = stack.length;
-					var s = "";
-					while( --i >= 0 )
-						s += "Called from "+stack[i]+"\\n";
-					alert(msg+"\\n\\n"+s);
-					return false;
-				}
-				return f(msg,stack);
-			}
-		');
+__js__('onerror = function(msg,url,line) {
+		var stack = $s.copy();
+		var f = js.Lib.onerror;
+		$s.splice(0,$s.length);
+		if( f == null ) {
+			var i = stack.length;
+			var s = "";
+			while( --i >= 0 )
+				s += "Called from "+stack[i]+"\\n";
+			alert(msg+"\\n\\n"+s);
+			return false;
+		}
+		return f(msg,stack);
+	}');
 		#else
-		__js__('
-			onerror = function(msg,url,line) {
-				var f = js.Lib.onerror;
-				if( f == null )
-					return false;
-				return f(msg,[url+":"+line]);
-			}
-		');
+__js__('onerror = function(msg,url,line) {
+		var f = js.Lib.onerror;
+		if( f == null )
+			return false;
+		return f(msg,[url+":"+line]);
+	}');
 		#end
 	}
 
